parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ERROR
    ESPACIO
    SALTO
    TABULADO

Grammar

Rule 0     S' -> sigma
Rule 1     sigma -> DOC A_ARTICLE info title cont C_ARTICLE
Rule 2     sigma -> DOC A_ARTICLE title cont C_ARTICLE
Rule 3     sigma -> DOC A_ARTICLE info cont C_ARTICLE
Rule 4     sigma -> DOC A_ARTICLE cont C_ARTICLE
Rule 5     info -> A_INFO dtinfo C_INFO
Rule 6     dtinfo -> title
Rule 7     dtinfo -> author
Rule 8     dtinfo -> abstract
Rule 9     dtinfo -> abstract dtinfo
Rule 10    dtinfo -> media
Rule 11    dtinfo -> media dtinfo
Rule 12    dtinfo -> title dtinfo
Rule 13    dtinfo -> author dtinfo
Rule 14    dtinfo -> address
Rule 15    dtinfo -> copy
Rule 16    dtinfo -> date
Rule 17    dtinfo -> address dtinfo
Rule 18    dtinfo -> copy dtinfo
Rule 19    dtinfo -> date dtinfo
Rule 20    title -> A_TITLE tlt C_TITLE
Rule 21    tlt -> TEXT
Rule 22    tlt -> empha
Rule 23    tlt -> link
Rule 24    tlt -> email
Rule 25    tlt -> TEXT tlt
Rule 26    tlt -> empha tlt
Rule 27    tlt -> link tlt
Rule 28    tlt -> email tlt
Rule 29    empha -> A_EMPHA sp C_EMPHA
Rule 30    sp -> TEXT sp
Rule 31    sp -> link sp
Rule 32    sp -> email sp
Rule 33    sp -> empha sp
Rule 34    sp -> comment sp
Rule 35    sp -> author sp
Rule 36    sp -> TEXT
Rule 37    sp -> link
Rule 38    sp -> email
Rule 39    sp -> empha
Rule 40    sp -> comment
Rule 41    sp -> author
Rule 42    link -> A_LINK URL C_URLLINK sp C_LINK
Rule 43    link -> A_LINK MURL C_URLLINK sp C_LINK
Rule 44    email -> A_EMAIL nm C_EMAIL
Rule 45    nm -> TEXT
Rule 46    nm -> link
Rule 47    nm -> empha
Rule 48    nm -> comment
Rule 49    nm -> TEXT nm
Rule 50    nm -> link nm
Rule 51    nm -> empha nm
Rule 52    nm -> comment nm
Rule 53    comment -> A_COMMENT sp C_COMMENT
Rule 54    author -> A_AUTHOR names C_AUTHOR
Rule 55    names -> fname
Rule 56    names -> sname
Rule 57    names -> fname names
Rule 58    fname -> A_FNAME nm C_FNAME
Rule 59    sname -> A_SNAME nm C_SNAME
Rule 60    address -> A_ADDRESS contad C_ADDRESS
Rule 61    contad -> TEXT
Rule 62    contad -> street
Rule 63    contad -> city
Rule 64    contad -> state
Rule 65    contad -> street contad
Rule 66    contad -> city contad
Rule 67    contad -> state contad
Rule 68    contad -> phone
Rule 69    contad -> email
Rule 70    contad -> TEXT contad
Rule 71    contad -> phone contad
Rule 72    contad -> email contad
Rule 73    street -> A_STREET nm C_STREET
Rule 74    city -> A_CITY nm C_CITY
Rule 75    state -> A_STATE nm C_STATE
Rule 76    phone -> A_PHONE nm C_PHONE
Rule 77    copy -> A_COPY year holder C_COPY
Rule 78    copy -> A_COPY year C_COPY
Rule 79    year -> A_YEAR nm C_YEAR
Rule 80    year -> A_YEAR nm C_YEAR year
Rule 81    holder -> A_HOLDER nm C_HOLDER
Rule 82    holder -> A_HOLDER nm C_HOLDER holder
Rule 83    date -> A_DATE nm C_DATE
Rule 84    cont -> data sections
Rule 85    cont -> data
Rule 86    data -> simpara
Rule 87    data -> para
Rule 88    data -> ilist
Rule 89    data -> table
Rule 90    data -> media
Rule 91    data -> import
Rule 92    data -> abstract
Rule 93    data -> comment
Rule 94    data -> simpara data
Rule 95    data -> para data
Rule 96    data -> ilist data
Rule 97    data -> table data
Rule 98    data -> media data
Rule 99    data -> import data
Rule 100   data -> abstract data
Rule 101   data -> comment data
Rule 102   simpara -> A_SIMPARA sp C_SIMPARA
Rule 103   para -> A_PARA dtp C_PARA
Rule 104   dtp -> TEXT dtp
Rule 105   dtp -> empha dtp
Rule 106   dtp -> link dtp
Rule 107   dtp -> email dtp
Rule 108   dtp -> author dtp
Rule 109   dtp -> comment dtp
Rule 110   dtp -> ilist dtp
Rule 111   dtp -> import dtp
Rule 112   dtp -> table dtp
Rule 113   dtp -> media dtp
Rule 114   dtp -> TEXT
Rule 115   dtp -> empha
Rule 116   dtp -> link
Rule 117   dtp -> email
Rule 118   dtp -> author
Rule 119   dtp -> comment
Rule 120   dtp -> ilist
Rule 121   dtp -> import
Rule 122   dtp -> table
Rule 123   dtp -> media
Rule 124   ilist -> A_ILIST item C_ILIST
Rule 125   item -> A_ITEM dlist C_ITEM
Rule 126   dlist -> import
Rule 127   dlist -> para
Rule 128   dlist -> simpara
Rule 129   dlist -> ilist
Rule 130   dlist -> table
Rule 131   dlist -> media
Rule 132   dlist -> comment
Rule 133   dlist -> abstract
Rule 134   dlist -> address
Rule 135   dlist -> address dlist
Rule 136   dlist -> import dlist
Rule 137   dlist -> para dlist
Rule 138   dlist -> simpara dlist
Rule 139   dlist -> ilist dlist
Rule 140   dlist -> table dlist
Rule 141   dlist -> media dlist
Rule 142   dlist -> comment dlist
Rule 143   dlist -> abstract dlist
Rule 144   import -> A_IMPORT title data C_IMPORT
Rule 145   import -> A_IMPORT data C_IMPORT
Rule 146   table -> A_TABLE tabdata C_TABLE
Rule 147   tabdata -> media tabdata
Rule 148   tabdata -> tgroup tabdata
Rule 149   tabdata -> tgroup
Rule 150   tabdata -> media
Rule 151   media -> A_MEDIA info extramedia C_MEDIA
Rule 152   media -> A_MEDIA extramedia C_MEDIA
Rule 153   extramedia -> video extramedia
Rule 154   extramedia -> image extramedia
Rule 155   extramedia -> image
Rule 156   extramedia -> video
Rule 157   video -> A_VIDEO info A_VIDEOD URL C_MEDIABRACKET C_VIDEO
Rule 158   video -> A_VIDEO info A_VIDEOD MURL C_MEDIABRACKET C_VIDEO
Rule 159   video -> A_VIDEO A_VIDEOD MURL C_MEDIABRACKET C_VIDEO
Rule 160   video -> A_VIDEO A_VIDEOD URL C_MEDIABRACKET C_VIDEO
Rule 161   image -> A_IMAGE info A_IMAGED URL C_MEDIABRACKET C_IMAGE
Rule 162   image -> A_IMAGE info A_IMAGED MURL C_MEDIABRACKET C_IMAGE
Rule 163   image -> A_IMAGE A_IMAGED MURL C_MEDIABRACKET C_IMAGE
Rule 164   image -> A_IMAGE A_IMAGED URL C_MEDIABRACKET C_IMAGE
Rule 165   tgroup -> A_TGROUP thead tbody tfoot C_TGROUP
Rule 166   tgroup -> A_TGROUP tbody tfoot C_TGROUP
Rule 167   tgroup -> A_TGROUP thead tbody C_TGROUP
Rule 168   tgroup -> A_TGROUP tbody C_TGROUP
Rule 169   thead -> A_THEAD row C_THEAD
Rule 170   row -> A_ROW entry C_ROW row
Rule 171   row -> A_ROW entrytbl C_ROW row
Rule 172   row -> A_ROW entrytbl C_ROW
Rule 173   row -> A_ROW entry C_ROW
Rule 174   entry -> A_ENTRY dent C_ENTRY
Rule 175   entry -> A_ENTRY dent C_ENTRY entry
Rule 176   entry -> A_ENTRY dent C_ENTRY entrytbl
Rule 177   dent -> TEXT dent
Rule 178   dent -> ilist dent
Rule 179   dent -> import dent
Rule 180   dent -> para dent
Rule 181   dent -> simpara dent
Rule 182   dent -> media dent
Rule 183   dent -> comment dent
Rule 184   dent -> abstract dent
Rule 185   dent -> TEXT
Rule 186   dent -> ilist
Rule 187   dent -> import
Rule 188   dent -> para
Rule 189   dent -> simpara
Rule 190   dent -> media
Rule 191   dent -> comment
Rule 192   dent -> abstract
Rule 193   abstract -> A_ABSTRACT title dabs C_ABSTRACT
Rule 194   abstract -> A_ABSTRACT dabs C_ABSTRACT
Rule 195   dabs -> para dabs
Rule 196   dabs -> simpara dabs
Rule 197   dabs -> para
Rule 198   dabs -> simpara
Rule 199   entrytbl -> A_ENTRYTBL thead tbody C_ENTRYTBL
Rule 200   entrytbl -> A_ENTRYTBL thead tbody C_ENTRYTBL entry
Rule 201   entrytbl -> A_ENTRYTBL thead tbody C_ENTRYTBL entrytbl
Rule 202   tbody -> A_TBODY row C_TBODY
Rule 203   tfoot -> A_TFOOT row C_TFOOT
Rule 204   sections -> sect sections
Rule 205   sections -> simsect sections
Rule 206   sections -> sect
Rule 207   sections -> simsect
Rule 208   sect -> A_SECT info title cont C_SECT
Rule 209   sect -> A_SECT info cont C_SECT
Rule 210   sect -> A_SECT title cont C_SECT
Rule 211   sect -> A_SECT cont C_SECT
Rule 212   simsect -> A_SIMSECT info title data C_SIMSECT
Rule 213   simsect -> A_SIMSECT title data C_SIMSECT
Rule 214   simsect -> A_SIMSECT info data C_SIMSECT
Rule 215   simsect -> A_SIMSECT data C_SIMSECT

Terminals, with rules where they appear

A_ABSTRACT           : 193 194
A_ADDRESS            : 60
A_ARTICLE            : 1 2 3 4
A_AUTHOR             : 54
A_CITY               : 74
A_COMMENT            : 53
A_COPY               : 77 78
A_DATE               : 83
A_EMAIL              : 44
A_EMPHA              : 29
A_ENTRY              : 174 175 176
A_ENTRYTBL           : 199 200 201
A_FNAME              : 58
A_HOLDER             : 81 82
A_ILIST              : 124
A_IMAGE              : 161 162 163 164
A_IMAGED             : 161 162 163 164
A_IMPORT             : 144 145
A_INFO               : 5
A_ITEM               : 125
A_LINK               : 42 43
A_MEDIA              : 151 152
A_PARA               : 103
A_PHONE              : 76
A_ROW                : 170 171 172 173
A_SECT               : 208 209 210 211
A_SIMPARA            : 102
A_SIMSECT            : 212 213 214 215
A_SNAME              : 59
A_STATE              : 75
A_STREET             : 73
A_TABLE              : 146
A_TBODY              : 202
A_TFOOT              : 203
A_TGROUP             : 165 166 167 168
A_THEAD              : 169
A_TITLE              : 20
A_VIDEO              : 157 158 159 160
A_VIDEOD             : 157 158 159 160
A_YEAR               : 79 80
C_ABSTRACT           : 193 194
C_ADDRESS            : 60
C_ARTICLE            : 1 2 3 4
C_AUTHOR             : 54
C_CITY               : 74
C_COMMENT            : 53
C_COPY               : 77 78
C_DATE               : 83
C_EMAIL              : 44
C_EMPHA              : 29
C_ENTRY              : 174 175 176
C_ENTRYTBL           : 199 200 201
C_FNAME              : 58
C_HOLDER             : 81 82
C_ILIST              : 124
C_IMAGE              : 161 162 163 164
C_IMPORT             : 144 145
C_INFO               : 5
C_ITEM               : 125
C_LINK               : 42 43
C_MEDIA              : 151 152
C_MEDIABRACKET       : 157 158 159 160 161 162 163 164
C_PARA               : 103
C_PHONE              : 76
C_ROW                : 170 171 172 173
C_SECT               : 208 209 210 211
C_SIMPARA            : 102
C_SIMSECT            : 212 213 214 215
C_SNAME              : 59
C_STATE              : 75
C_STREET             : 73
C_TABLE              : 146
C_TBODY              : 202
C_TFOOT              : 203
C_TGROUP             : 165 166 167 168
C_THEAD              : 169
C_TITLE              : 20
C_URLLINK            : 42 43
C_VIDEO              : 157 158 159 160
C_YEAR               : 79 80
DOC                  : 1 2 3 4
ERROR                : 
ESPACIO              : 
MURL                 : 43 158 159 162 163
SALTO                : 
TABULADO             : 
TEXT                 : 21 25 30 36 45 49 61 70 104 114 177 185
URL                  : 42 157 160 161 164
error                : 

Nonterminals, with rules where they appear

abstract             : 8 9 92 100 133 143 184 192
address              : 14 17 134 135
author               : 7 13 35 41 108 118
city                 : 63 66
comment              : 34 40 48 52 93 101 109 119 132 142 183 191
cont                 : 1 2 3 4 208 209 210 211
contad               : 60 65 66 67 70 71 72
copy                 : 15 18
dabs                 : 193 194 195 196
data                 : 84 85 94 95 96 97 98 99 100 101 144 145 212 213 214 215
date                 : 16 19
dent                 : 174 175 176 177 178 179 180 181 182 183 184
dlist                : 125 135 136 137 138 139 140 141 142 143
dtinfo               : 5 9 11 12 13 17 18 19
dtp                  : 103 104 105 106 107 108 109 110 111 112 113
email                : 24 28 32 38 69 72 107 117
empha                : 22 26 33 39 47 51 105 115
entry                : 170 173 175 200
entrytbl             : 171 172 176 201
extramedia           : 151 152 153 154
fname                : 55 57
holder               : 77 82
ilist                : 88 96 110 120 129 139 178 186
image                : 154 155
import               : 91 99 111 121 126 136 179 187
info                 : 1 3 151 157 158 161 162 208 209 212 214
item                 : 124
link                 : 23 27 31 37 46 50 106 116
media                : 10 11 90 98 113 123 131 141 147 150 182 190
names                : 54 57
nm                   : 44 49 50 51 52 58 59 73 74 75 76 79 80 81 82 83
para                 : 87 95 127 137 180 188 195 197
phone                : 68 71
row                  : 169 170 171 202 203
sect                 : 204 206
sections             : 84 204 205
sigma                : 0
simpara              : 86 94 128 138 181 189 196 198
simsect              : 205 207
sname                : 56
sp                   : 29 30 31 32 33 34 35 42 43 53 102
state                : 64 67
street               : 62 65
tabdata              : 146 147 148
table                : 89 97 112 122 130 140
tbody                : 165 166 167 168 199 200 201
tfoot                : 165 166
tgroup               : 148 149
thead                : 165 167 199 200 201
title                : 1 2 6 12 144 193 208 210 212 213
tlt                  : 20 25 26 27 28
video                : 153 156
year                 : 77 78 80

Parsing method: LALR

state 0

    (0) S' -> . sigma
    (1) sigma -> . DOC A_ARTICLE info title cont C_ARTICLE
    (2) sigma -> . DOC A_ARTICLE title cont C_ARTICLE
    (3) sigma -> . DOC A_ARTICLE info cont C_ARTICLE
    (4) sigma -> . DOC A_ARTICLE cont C_ARTICLE

    DOC             shift and go to state 2

    sigma                          shift and go to state 1

state 1

    (0) S' -> sigma .



state 2

    (1) sigma -> DOC . A_ARTICLE info title cont C_ARTICLE
    (2) sigma -> DOC . A_ARTICLE title cont C_ARTICLE
    (3) sigma -> DOC . A_ARTICLE info cont C_ARTICLE
    (4) sigma -> DOC . A_ARTICLE cont C_ARTICLE

    A_ARTICLE       shift and go to state 3


state 3

    (1) sigma -> DOC A_ARTICLE . info title cont C_ARTICLE
    (2) sigma -> DOC A_ARTICLE . title cont C_ARTICLE
    (3) sigma -> DOC A_ARTICLE . info cont C_ARTICLE
    (4) sigma -> DOC A_ARTICLE . cont C_ARTICLE
    (5) info -> . A_INFO dtinfo C_INFO
    (20) title -> . A_TITLE tlt C_TITLE
    (84) cont -> . data sections
    (85) cont -> . data
    (86) data -> . simpara
    (87) data -> . para
    (88) data -> . ilist
    (89) data -> . table
    (90) data -> . media
    (91) data -> . import
    (92) data -> . abstract
    (93) data -> . comment
    (94) data -> . simpara data
    (95) data -> . para data
    (96) data -> . ilist data
    (97) data -> . table data
    (98) data -> . media data
    (99) data -> . import data
    (100) data -> . abstract data
    (101) data -> . comment data
    (102) simpara -> . A_SIMPARA sp C_SIMPARA
    (103) para -> . A_PARA dtp C_PARA
    (124) ilist -> . A_ILIST item C_ILIST
    (146) table -> . A_TABLE tabdata C_TABLE
    (151) media -> . A_MEDIA info extramedia C_MEDIA
    (152) media -> . A_MEDIA extramedia C_MEDIA
    (144) import -> . A_IMPORT title data C_IMPORT
    (145) import -> . A_IMPORT data C_IMPORT
    (193) abstract -> . A_ABSTRACT title dabs C_ABSTRACT
    (194) abstract -> . A_ABSTRACT dabs C_ABSTRACT
    (53) comment -> . A_COMMENT sp C_COMMENT

    A_INFO          shift and go to state 7
    A_TITLE         shift and go to state 8
    A_SIMPARA       shift and go to state 18
    A_PARA          shift and go to state 19
    A_ILIST         shift and go to state 20
    A_TABLE         shift and go to state 21
    A_MEDIA         shift and go to state 22
    A_IMPORT        shift and go to state 23
    A_ABSTRACT      shift and go to state 24
    A_COMMENT       shift and go to state 25

    info                           shift and go to state 4
    title                          shift and go to state 5
    cont                           shift and go to state 6
    data                           shift and go to state 9
    simpara                        shift and go to state 10
    para                           shift and go to state 11
    ilist                          shift and go to state 12
    table                          shift and go to state 13
    media                          shift and go to state 14
    import                         shift and go to state 15
    abstract                       shift and go to state 16
    comment                        shift and go to state 17

state 4

    (1) sigma -> DOC A_ARTICLE info . title cont C_ARTICLE
    (3) sigma -> DOC A_ARTICLE info . cont C_ARTICLE
    (20) title -> . A_TITLE tlt C_TITLE
    (84) cont -> . data sections
    (85) cont -> . data
    (86) data -> . simpara
    (87) data -> . para
    (88) data -> . ilist
    (89) data -> . table
    (90) data -> . media
    (91) data -> . import
    (92) data -> . abstract
    (93) data -> . comment
    (94) data -> . simpara data
    (95) data -> . para data
    (96) data -> . ilist data
    (97) data -> . table data
    (98) data -> . media data
    (99) data -> . import data
    (100) data -> . abstract data
    (101) data -> . comment data
    (102) simpara -> . A_SIMPARA sp C_SIMPARA
    (103) para -> . A_PARA dtp C_PARA
    (124) ilist -> . A_ILIST item C_ILIST
    (146) table -> . A_TABLE tabdata C_TABLE
    (151) media -> . A_MEDIA info extramedia C_MEDIA
    (152) media -> . A_MEDIA extramedia C_MEDIA
    (144) import -> . A_IMPORT title data C_IMPORT
    (145) import -> . A_IMPORT data C_IMPORT
    (193) abstract -> . A_ABSTRACT title dabs C_ABSTRACT
    (194) abstract -> . A_ABSTRACT dabs C_ABSTRACT
    (53) comment -> . A_COMMENT sp C_COMMENT

    A_TITLE         shift and go to state 8
    A_SIMPARA       shift and go to state 18
    A_PARA          shift and go to state 19
    A_ILIST         shift and go to state 20
    A_TABLE         shift and go to state 21
    A_MEDIA         shift and go to state 22
    A_IMPORT        shift and go to state 23
    A_ABSTRACT      shift and go to state 24
    A_COMMENT       shift and go to state 25

    title                          shift and go to state 26
    cont                           shift and go to state 27
    data                           shift and go to state 9
    simpara                        shift and go to state 10
    para                           shift and go to state 11
    ilist                          shift and go to state 12
    table                          shift and go to state 13
    media                          shift and go to state 14
    import                         shift and go to state 15
    abstract                       shift and go to state 16
    comment                        shift and go to state 17

state 5

    (2) sigma -> DOC A_ARTICLE title . cont C_ARTICLE
    (84) cont -> . data sections
    (85) cont -> . data
    (86) data -> . simpara
    (87) data -> . para
    (88) data -> . ilist
    (89) data -> . table
    (90) data -> . media
    (91) data -> . import
    (92) data -> . abstract
    (93) data -> . comment
    (94) data -> . simpara data
    (95) data -> . para data
    (96) data -> . ilist data
    (97) data -> . table data
    (98) data -> . media data
    (99) data -> . import data
    (100) data -> . abstract data
    (101) data -> . comment data
    (102) simpara -> . A_SIMPARA sp C_SIMPARA
    (103) para -> . A_PARA dtp C_PARA
    (124) ilist -> . A_ILIST item C_ILIST
    (146) table -> . A_TABLE tabdata C_TABLE
    (151) media -> . A_MEDIA info extramedia C_MEDIA
    (152) media -> . A_MEDIA extramedia C_MEDIA
    (144) import -> . A_IMPORT title data C_IMPORT
    (145) import -> . A_IMPORT data C_IMPORT
    (193) abstract -> . A_ABSTRACT title dabs C_ABSTRACT
    (194) abstract -> . A_ABSTRACT dabs C_ABSTRACT
    (53) comment -> . A_COMMENT sp C_COMMENT

    A_SIMPARA       shift and go to state 18
    A_PARA          shift and go to state 19
    A_ILIST         shift and go to state 20
    A_TABLE         shift and go to state 21
    A_MEDIA         shift and go to state 22
    A_IMPORT        shift and go to state 23
    A_ABSTRACT      shift and go to state 24
    A_COMMENT       shift and go to state 25

    cont                           shift and go to state 28
    data                           shift and go to state 9
    simpara                        shift and go to state 10
    para                           shift and go to state 11
    ilist                          shift and go to state 12
    table                          shift and go to state 13
    media                          shift and go to state 14
    import                         shift and go to state 15
    abstract                       shift and go to state 16
    comment                        shift and go to state 17

state 6

    (4) sigma -> DOC A_ARTICLE cont . C_ARTICLE

    C_ARTICLE       shift and go to state 29


state 7

    (5) info -> A_INFO . dtinfo C_INFO
    (6) dtinfo -> . title
    (7) dtinfo -> . author
    (8) dtinfo -> . abstract
    (9) dtinfo -> . abstract dtinfo
    (10) dtinfo -> . media
    (11) dtinfo -> . media dtinfo
    (12) dtinfo -> . title dtinfo
    (13) dtinfo -> . author dtinfo
    (14) dtinfo -> . address
    (15) dtinfo -> . copy
    (16) dtinfo -> . date
    (17) dtinfo -> . address dtinfo
    (18) dtinfo -> . copy dtinfo
    (19) dtinfo -> . date dtinfo
    (20) title -> . A_TITLE tlt C_TITLE
    (54) author -> . A_AUTHOR names C_AUTHOR
    (193) abstract -> . A_ABSTRACT title dabs C_ABSTRACT
    (194) abstract -> . A_ABSTRACT dabs C_ABSTRACT
    (151) media -> . A_MEDIA info extramedia C_MEDIA
    (152) media -> . A_MEDIA extramedia C_MEDIA
    (60) address -> . A_ADDRESS contad C_ADDRESS
    (77) copy -> . A_COPY year holder C_COPY
    (78) copy -> . A_COPY year C_COPY
    (83) date -> . A_DATE nm C_DATE

    A_TITLE         shift and go to state 8
    A_AUTHOR        shift and go to state 38
    A_ABSTRACT      shift and go to state 24
    A_MEDIA         shift and go to state 22
    A_ADDRESS       shift and go to state 39
    A_COPY          shift and go to state 40
    A_DATE          shift and go to state 41

    dtinfo                         shift and go to state 30
    title                          shift and go to state 31
    author                         shift and go to state 32
    abstract                       shift and go to state 33
    media                          shift and go to state 34
    address                        shift and go to state 35
    copy                           shift and go to state 36
    date                           shift and go to state 37

state 8

    (20) title -> A_TITLE . tlt C_TITLE
    (21) tlt -> . TEXT
    (22) tlt -> . empha
    (23) tlt -> . link
    (24) tlt -> . email
    (25) tlt -> . TEXT tlt
    (26) tlt -> . empha tlt
    (27) tlt -> . link tlt
    (28) tlt -> . email tlt
    (29) empha -> . A_EMPHA sp C_EMPHA
    (42) link -> . A_LINK URL C_URLLINK sp C_LINK
    (43) link -> . A_LINK MURL C_URLLINK sp C_LINK
    (44) email -> . A_EMAIL nm C_EMAIL

    TEXT            shift and go to state 43
    A_EMPHA         shift and go to state 47
    A_LINK          shift and go to state 48
    A_EMAIL         shift and go to state 49

    tlt                            shift and go to state 42
    empha                          shift and go to state 44
    link                           shift and go to state 45
    email                          shift and go to state 46

state 9

    (84) cont -> data . sections
    (85) cont -> data .
    (204) sections -> . sect sections
    (205) sections -> . simsect sections
    (206) sections -> . sect
    (207) sections -> . simsect
    (208) sect -> . A_SECT info title cont C_SECT
    (209) sect -> . A_SECT info cont C_SECT
    (210) sect -> . A_SECT title cont C_SECT
    (211) sect -> . A_SECT cont C_SECT
    (212) simsect -> . A_SIMSECT info title data C_SIMSECT
    (213) simsect -> . A_SIMSECT title data C_SIMSECT
    (214) simsect -> . A_SIMSECT info data C_SIMSECT
    (215) simsect -> . A_SIMSECT data C_SIMSECT

    C_ARTICLE       reduce using rule 85 (cont -> data .)
    C_SECT          reduce using rule 85 (cont -> data .)
    A_SECT          shift and go to state 53
    A_SIMSECT       shift and go to state 54

    sections                       shift and go to state 50
    sect                           shift and go to state 51
    simsect                        shift and go to state 52

state 10

    (86) data -> simpara .
    (94) data -> simpara . data
    (86) data -> . simpara
    (87) data -> . para
    (88) data -> . ilist
    (89) data -> . table
    (90) data -> . media
    (91) data -> . import
    (92) data -> . abstract
    (93) data -> . comment
    (94) data -> . simpara data
    (95) data -> . para data
    (96) data -> . ilist data
    (97) data -> . table data
    (98) data -> . media data
    (99) data -> . import data
    (100) data -> . abstract data
    (101) data -> . comment data
    (102) simpara -> . A_SIMPARA sp C_SIMPARA
    (103) para -> . A_PARA dtp C_PARA
    (124) ilist -> . A_ILIST item C_ILIST
    (146) table -> . A_TABLE tabdata C_TABLE
    (151) media -> . A_MEDIA info extramedia C_MEDIA
    (152) media -> . A_MEDIA extramedia C_MEDIA
    (144) import -> . A_IMPORT title data C_IMPORT
    (145) import -> . A_IMPORT data C_IMPORT
    (193) abstract -> . A_ABSTRACT title dabs C_ABSTRACT
    (194) abstract -> . A_ABSTRACT dabs C_ABSTRACT
    (53) comment -> . A_COMMENT sp C_COMMENT

    A_SECT          reduce using rule 86 (data -> simpara .)
    A_SIMSECT       reduce using rule 86 (data -> simpara .)
    C_ARTICLE       reduce using rule 86 (data -> simpara .)
    C_IMPORT        reduce using rule 86 (data -> simpara .)
    C_SECT          reduce using rule 86 (data -> simpara .)
    C_SIMSECT       reduce using rule 86 (data -> simpara .)
    A_SIMPARA       shift and go to state 18
    A_PARA          shift and go to state 19
    A_ILIST         shift and go to state 20
    A_TABLE         shift and go to state 21
    A_MEDIA         shift and go to state 22
    A_IMPORT        shift and go to state 23
    A_ABSTRACT      shift and go to state 24
    A_COMMENT       shift and go to state 25

    simpara                        shift and go to state 10
    data                           shift and go to state 55
    para                           shift and go to state 11
    ilist                          shift and go to state 12
    table                          shift and go to state 13
    media                          shift and go to state 14
    import                         shift and go to state 15
    abstract                       shift and go to state 16
    comment                        shift and go to state 17

state 11

    (87) data -> para .
    (95) data -> para . data
    (86) data -> . simpara
    (87) data -> . para
    (88) data -> . ilist
    (89) data -> . table
    (90) data -> . media
    (91) data -> . import
    (92) data -> . abstract
    (93) data -> . comment
    (94) data -> . simpara data
    (95) data -> . para data
    (96) data -> . ilist data
    (97) data -> . table data
    (98) data -> . media data
    (99) data -> . import data
    (100) data -> . abstract data
    (101) data -> . comment data
    (102) simpara -> . A_SIMPARA sp C_SIMPARA
    (103) para -> . A_PARA dtp C_PARA
    (124) ilist -> . A_ILIST item C_ILIST
    (146) table -> . A_TABLE tabdata C_TABLE
    (151) media -> . A_MEDIA info extramedia C_MEDIA
    (152) media -> . A_MEDIA extramedia C_MEDIA
    (144) import -> . A_IMPORT title data C_IMPORT
    (145) import -> . A_IMPORT data C_IMPORT
    (193) abstract -> . A_ABSTRACT title dabs C_ABSTRACT
    (194) abstract -> . A_ABSTRACT dabs C_ABSTRACT
    (53) comment -> . A_COMMENT sp C_COMMENT

    A_SECT          reduce using rule 87 (data -> para .)
    A_SIMSECT       reduce using rule 87 (data -> para .)
    C_ARTICLE       reduce using rule 87 (data -> para .)
    C_IMPORT        reduce using rule 87 (data -> para .)
    C_SECT          reduce using rule 87 (data -> para .)
    C_SIMSECT       reduce using rule 87 (data -> para .)
    A_SIMPARA       shift and go to state 18
    A_PARA          shift and go to state 19
    A_ILIST         shift and go to state 20
    A_TABLE         shift and go to state 21
    A_MEDIA         shift and go to state 22
    A_IMPORT        shift and go to state 23
    A_ABSTRACT      shift and go to state 24
    A_COMMENT       shift and go to state 25

    para                           shift and go to state 11
    data                           shift and go to state 56
    simpara                        shift and go to state 10
    ilist                          shift and go to state 12
    table                          shift and go to state 13
    media                          shift and go to state 14
    import                         shift and go to state 15
    abstract                       shift and go to state 16
    comment                        shift and go to state 17

state 12

    (88) data -> ilist .
    (96) data -> ilist . data
    (86) data -> . simpara
    (87) data -> . para
    (88) data -> . ilist
    (89) data -> . table
    (90) data -> . media
    (91) data -> . import
    (92) data -> . abstract
    (93) data -> . comment
    (94) data -> . simpara data
    (95) data -> . para data
    (96) data -> . ilist data
    (97) data -> . table data
    (98) data -> . media data
    (99) data -> . import data
    (100) data -> . abstract data
    (101) data -> . comment data
    (102) simpara -> . A_SIMPARA sp C_SIMPARA
    (103) para -> . A_PARA dtp C_PARA
    (124) ilist -> . A_ILIST item C_ILIST
    (146) table -> . A_TABLE tabdata C_TABLE
    (151) media -> . A_MEDIA info extramedia C_MEDIA
    (152) media -> . A_MEDIA extramedia C_MEDIA
    (144) import -> . A_IMPORT title data C_IMPORT
    (145) import -> . A_IMPORT data C_IMPORT
    (193) abstract -> . A_ABSTRACT title dabs C_ABSTRACT
    (194) abstract -> . A_ABSTRACT dabs C_ABSTRACT
    (53) comment -> . A_COMMENT sp C_COMMENT

    A_SECT          reduce using rule 88 (data -> ilist .)
    A_SIMSECT       reduce using rule 88 (data -> ilist .)
    C_ARTICLE       reduce using rule 88 (data -> ilist .)
    C_IMPORT        reduce using rule 88 (data -> ilist .)
    C_SECT          reduce using rule 88 (data -> ilist .)
    C_SIMSECT       reduce using rule 88 (data -> ilist .)
    A_SIMPARA       shift and go to state 18
    A_PARA          shift and go to state 19
    A_ILIST         shift and go to state 20
    A_TABLE         shift and go to state 21
    A_MEDIA         shift and go to state 22
    A_IMPORT        shift and go to state 23
    A_ABSTRACT      shift and go to state 24
    A_COMMENT       shift and go to state 25

    ilist                          shift and go to state 12
    data                           shift and go to state 57
    simpara                        shift and go to state 10
    para                           shift and go to state 11
    table                          shift and go to state 13
    media                          shift and go to state 14
    import                         shift and go to state 15
    abstract                       shift and go to state 16
    comment                        shift and go to state 17

state 13

    (89) data -> table .
    (97) data -> table . data
    (86) data -> . simpara
    (87) data -> . para
    (88) data -> . ilist
    (89) data -> . table
    (90) data -> . media
    (91) data -> . import
    (92) data -> . abstract
    (93) data -> . comment
    (94) data -> . simpara data
    (95) data -> . para data
    (96) data -> . ilist data
    (97) data -> . table data
    (98) data -> . media data
    (99) data -> . import data
    (100) data -> . abstract data
    (101) data -> . comment data
    (102) simpara -> . A_SIMPARA sp C_SIMPARA
    (103) para -> . A_PARA dtp C_PARA
    (124) ilist -> . A_ILIST item C_ILIST
    (146) table -> . A_TABLE tabdata C_TABLE
    (151) media -> . A_MEDIA info extramedia C_MEDIA
    (152) media -> . A_MEDIA extramedia C_MEDIA
    (144) import -> . A_IMPORT title data C_IMPORT
    (145) import -> . A_IMPORT data C_IMPORT
    (193) abstract -> . A_ABSTRACT title dabs C_ABSTRACT
    (194) abstract -> . A_ABSTRACT dabs C_ABSTRACT
    (53) comment -> . A_COMMENT sp C_COMMENT

    A_SECT          reduce using rule 89 (data -> table .)
    A_SIMSECT       reduce using rule 89 (data -> table .)
    C_ARTICLE       reduce using rule 89 (data -> table .)
    C_IMPORT        reduce using rule 89 (data -> table .)
    C_SECT          reduce using rule 89 (data -> table .)
    C_SIMSECT       reduce using rule 89 (data -> table .)
    A_SIMPARA       shift and go to state 18
    A_PARA          shift and go to state 19
    A_ILIST         shift and go to state 20
    A_TABLE         shift and go to state 21
    A_MEDIA         shift and go to state 22
    A_IMPORT        shift and go to state 23
    A_ABSTRACT      shift and go to state 24
    A_COMMENT       shift and go to state 25

    table                          shift and go to state 13
    data                           shift and go to state 58
    simpara                        shift and go to state 10
    para                           shift and go to state 11
    ilist                          shift and go to state 12
    media                          shift and go to state 14
    import                         shift and go to state 15
    abstract                       shift and go to state 16
    comment                        shift and go to state 17

state 14
